--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -7,6 +7,7 @@
             href="{{ url_for('static', path='/todo/css/bootstrap.css') }}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>TodoApp</title>
 </head>
 <body>
