--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static:static', path='/todo/css/base.css', _external=True, _scheme='https') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static:static', path='/todo/css/bootstrap.css', _external=True, _scheme='https') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/todo/css/base.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/todo/css/bootstrap.css') }}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <title>TodoApp</title>
