--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/todo/css/base.css') }}">
+   <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/todo/css/base.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', path='/todo/css/bootstrap.css') }}">
+    -->
+    <link rel="stylesheet" type="text/css" href="https://todofastapi-production.up.railway.app/static/todo/css/base.css">
+    <link rel="stylesheet" type="text/css" href="https://todofastapi-production.up.railway.app/static/todo/css/bootstrap.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <title>TodoApp</title>
@@ -13,9 +16,13 @@
 
 {% block content %}
 {% endblock %}
-
+<!--
 <script src="{{ url_for('static', path='/todo/js/jquery-slim.js') }}"></script>
 <script src="{{ url_for('static', path='/todo/js/popper.js') }}"></script>
 <script src="{{ url_for('static', path='/todo/js/bootstrap.js') }}"></script>
+-->
+<script src="https://todofastapi-production.up.railway.app/static/todo/js/jquery-slim.js"></script>
+<script src="https://todofastapi-production.up.railway.app/static/todo/js/popper.js"></script>
+<script src="https://todofastapi-production.up.railway.app/static/todo/js/bootstrap.js"></script>
 </body>
 </html>
